--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "weather-icons": "git+https://github.com/erikflowers/weather-icons.git"
+    "styled-components": "^4.4.1",
+    "weather-icons": "git+https://github.com/erikflowers/weather-icons.git",
+    "weather-styled-icon": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
